--- a/Todo/todo.css
+++ b/Todo/todo.css
@@ -1,6 +1,10 @@
+body {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 h1 {
-  color: #bb271d;
-  text-align: center;
+  color: hsl(4, 72%, 72%);
+  text-align: left;
   font-size: 4rem;
   padding: 20px 30px;
 }
@@ -11,17 +15,20 @@ h1 {
 }
 
 ul {
-  margin: 0;
+  margin-top: 1rem;
   padding: 0;
+  width: 80%;
 }
 
 ul li {
   cursor: pointer;
+  position: relative;
   background: rgb(231, 243, 247);
   font-size: 1.8rem;
   transition: 0.2s;
-  padding: 1.2rem 0.8rem 1.2rem 4rem;
+  padding: 1.2rem 4rem;
   list-style: none;
+  border-radius: 3rem;
 }
 
 ul li:nth-child(even) {
@@ -29,17 +36,18 @@ ul li:nth-child(even) {
 }
 
 ul li:hover {
-  background: rgb(236, 227, 174);
+  background: #888;
 }
 
 ul li.checked {
-  background: #888;
+  background: rgb(32, 32, 32);
   color: #fff;
   text-decoration: line-through;
 }
 
 ul li.checked::before {
   content: "";
+  position: absolute;
   border-color: #fff;
   border-style: solid;
   border-width: 0 2px 2px 0;
@@ -47,6 +55,7 @@ ul li.checked::before {
   left: 1.6rem;
   transform: rotate(45deg);
   height: 1.5rem;
+  width: 0.7rem;
 }
 
 .edit {
@@ -82,7 +91,7 @@ ul li.checked::before {
 }
 
 .add {
-  width: 15rem;
+  width: 13%;
   background: dodgerblue;
   color: rgb(247, 245, 250);
   text-align: center;
@@ -100,25 +109,21 @@ ul li.checked::before {
 #new_task {
   border: 3px solid lightcyan;
   border-radius: 4rem;
-  width: 60rem;
+  width: 65%;
   padding: 10px;
   font-size: 1.6rem;
 }
 
 .list {
-  justify-content: center;
-  align-items: center;
-  margin-right: 2rem;
-  margin-left: 2rem;
+  border: 0;
 }
 
 .input {
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-/* .btn {
-  float: right;
-  padding-right: 5rem;
-} */
+.layout {
+  display: block;
+  justify-content: left;
+  width: 70%;
+}
